--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body style="background-color: #000000">
     <div class="webgl-content">
       <div id="unityContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo" style="background-color: #FFFFFF"></div>
+      <div class="footer" style="height: 42px, line-height: 42px">
+        <div class="webgl-logo" style="background-color: #37507d"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
         <div class="title" style="color: #FFFFFF">John Lemon’s Haunted Jaunt</div>
       </div>
